--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,12 +2,12 @@ $font-primary: 'Open Sans', Arial, sans-serif;
 
 
 // Overrides
-$grid-gutter-width: 40px; 
+$grid-gutter-width: 40px;
 $border-radius-base:  4px;
 $padding-base-vertical: 14px;
 
-$brand-primary: #7ED321;
-$brand-secondary: #118DF0; 
+$brand-primary: #01077c;
+$brand-secondary: #118DF0;
 
 $brand-white: #fff;
 $brand-black: #000;
@@ -53,16 +53,16 @@ $form-group-margin-bottom:       30px;
           border-radius: $radius;
 }
 @mixin flex() {
-	display: -webkit-box;      
-  	display: -moz-box;         
-  	display: -ms-flexbox;      
-  	display: -webkit-flex;     
-  	display: flex;             
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
 }
 @mixin flexwrap() {
 	flex-wrap: wrap;
-	-webkit-flex-wrap: wrap; 
-	-moz-flex-wrap: wrap; 
+	-webkit-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
 }
 
 @font-face {
@@ -77,7 +77,7 @@ $form-group-margin-bottom:       30px;
 }
 
 @mixin icomoon() {
-	
+
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -89,10 +89,10 @@ $form-group-margin-bottom:       30px;
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	
+
 }
 
-// Import 
+// Import
 @import 'bootstrap/mixins';
 @import 'bootstrap/variables';
 
@@ -101,7 +101,7 @@ $form-group-margin-bottom:       30px;
 
 /* =======================================================
 *
-* 	Template Style 
+* 	Template Style
 *
 * ======================================================= */
 
@@ -120,9 +120,9 @@ body {
 	height: 100%;
 	@include transition(.5s);
 	.offcanvas & {
-		// overflow: hidden;	
+		// overflow: hidden;
 		// position: absolute;
-		
+
 		&:after {
 			@include transition(2s);
 			position: absolute;
@@ -178,7 +178,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	padding: 20px 0;
 	z-index: 1001;
 	@include transition(.3s);
-	
+
 	@media screen and (max-width: $screen-sm) {
 		padding: 20px 0;
 	}
@@ -189,7 +189,7 @@ h1, h2, h3, h4, h5, h6, figure {
 		margin: 0;
 		padding: 0;
 		font-weight: bold;
-	
+
 		em {
 			color: $brand-white;
 			font-weight: 100;
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			@include transition(.4s);
 		}
 	}
-	
+
 	.menu-1, .menu-2 {
 		@media screen and (max-width: $screen-sm ) {
 			display: none;
@@ -261,7 +261,7 @@ h1, h2, h3, h4, h5, h6, figure {
 						border-width: 8px;
 						margin-left: -8px;
 					}
-					
+
 					li {
 						display: block;
 						margin-bottom: 7px;
@@ -386,7 +386,7 @@ h1, h2, h3, h4, h5, h6, figure {
 				@include border-radius(50%);
 				@include transition(.5s);
 			}
-			
+
 			&:hover {
 				color: rgba(255,255,255,1);
 				i {
@@ -450,12 +450,12 @@ h1, h2, h3, h4, h5, h6, figure {
 		display: table;
 		text-align: center;
 		background: $brand-white;
-		
+
 		-webkit-box-shadow: 0px 14px 30px -15px rgba(0,0,0,0.75);
 		-moz-box-shadow: 0px 14px 30px -15px rgba(0,0,0,0.75);
 		box-shadow: 0px 14px 30px -15px rgba(0,0,0,0.75);
 		@include border-radius(50%);
-		
+
 		i {
 			text-align: center;
 			display: table-cell;
@@ -475,7 +475,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 	&:hover {
 		.overlay {
-			background: rgba(0, 0, 0, .7);		
+			background: rgba(0, 0, 0, .7);
 		}
 		a {
 			position: relative;
@@ -484,7 +484,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			-ms-transform: scale(1.2);
 			-o-transform: scale(1.2);
 			transform: scale(1.2);
-			
+
 		}
 	}
 }
@@ -526,7 +526,7 @@ h1, h2, h3, h4, h5, h6, figure {
 		@media screen and (max-width: $screen-sm) {
 			height: 600px;
 		}
-	}	
+	}
 
 	&.gtco-cover-sm {
 		height: 600px;
@@ -541,7 +541,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			@media screen and (max-width: $screen-sm) {
 				height: 400px;
 			}
-		}	
+		}
 	}
 	&.gtco-cover-xs {
 		height: 500px;
@@ -558,7 +558,7 @@ h1, h2, h3, h4, h5, h6, figure {
 				padding: 3em 0;
 				height: inherit!important;
 			}
-		}	
+		}
 	}
 	&.gtco-cover-xxs {
 		padding: 3em 0;
@@ -577,7 +577,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
  #gtco-about {
-	
+
 	.img-shadow {
 		position: relative;
 		background: $brand-primary;
@@ -681,7 +681,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			img {
 				position: relative;
 				top: -20px;
-				right: -20px;			
+				right: -20px;
 			}
 		}
 	}
@@ -689,7 +689,7 @@ h1, h2, h3, h4, h5, h6, figure {
 		.img-shadow {
 			img {
 				top: -20px;
-				left: -20px;		
+				left: -20px;
 			}
 		}
 	}
@@ -816,7 +816,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			}
 			&.address {
 				&:before {
-					font-size: 30px;	
+					font-size: 30px;
 					content: "\e9d1";
 				}
 			}
@@ -876,7 +876,7 @@ form {
 			line-height: 1.5;
 			margin-bottom: 30px;
 		}
-		
+
 	}
 }
 #gtco-footer {
@@ -884,7 +884,7 @@ form {
 	background: lighten($brand-black, 98%);
 	.gtco-footer-links {
 		padding: 0;
-		margin: 0 0 20px 0;	
+		margin: 0 0 20px 0;
 		float: left;
 		width: 100%;
 		li {
@@ -1050,7 +1050,7 @@ form {
 			text-decoration: none;
 			outline: none;
 		}
-	}	
+	}
 }
 
 
@@ -1349,4 +1349,3 @@ form {
 		opacity: 0;
 	}
 }
-
