--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,9 +6,8 @@ $grid-gutter-width: 40px;
 $border-radius-base:  4px;
 $padding-base-vertical: 14px;
 
-$brand-primary: #01077c;
+$brand-primary: #7ED321;
 $brand-secondary: #118DF0;
-
 $brand-white: #fff;
 $brand-black: #000;
 $brand-darker: #444;
