Se agrega acerca de1

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -350,7 +350,7 @@ h1, h2, h3, h4, h5, h6, figure {
 						color: $brand-white;
 						span {
 							border: none!important;
-							background: $brand-primary;
+							background: #01077c;
 							padding: 4px 20px;
 							color: $brand-white;
 						}
